...
            "value" : "Rezept-URL"
          }
        },
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Recipe URL"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "URL de la receta"
...
